--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,6 @@
 # .streamlit/secrets.toml
 
+# Don't use this for deployment, use remote server
 [connections.postgresql]
 dialect = "postgresql"
 host = "localhost"
